1999-02-22  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/TestHarness.java (check): Use Double.toString to
	compare equality of doubles.

1999-02-16  Tom Tromey  <tromey@cygnus.com>

	* choose: Don't use `dirname'.  Sort and uniquify the list of used
	(auxiliary) files.

1999-02-15  Anthony Green  <green@cygnus.com>

	* gnu/testlet/SimpleTestHarness.java: Test for null cname before
	printing it out.

	* gnu/testlet/java/io/DataInputOutput/ReadStream.java: Tag as
	not-a-test.
	* gnu/testlet/java/io/DataInputOutput/ReadReference.java: Tag as
	using ReadStream.
	
	* choose: Add JLS1.0 and JLS1.1 tags.

	* gnu/testlet/java/lang/Math/cos.java,
	gnu/testlet/java/lang/Math/min.java,
	gnu/testlet/java/lang/Math/max.java,
	gnu/testlet/java/lang/Math/rint.java: Fixed comments.

Mon Feb 15 21:04:24 1999  Aaron M. Renn  <arenn@urbanophile.com>

	* gnu/testlet/java/io/DataInputOutput/WriteRead.java: Added file.

	* gnu/testlet/java/io/DataInputOutput/ReadStream.java: Added file.
	
	* gnu/testlet/java/io/DataInputOutput/ReadReference.java: Added file.

Mon Feb 15 20:16:12 1999  Aaron M. Renn  <arenn@urbanophile.com>

	* gnu/testlet/java/io/Utf8Encoding/WriteRead.java: Added this test
	case.

	* gnu/testlet/java/io/Utf8Encoding/ReadReference.java: Added this
	test case.

Mon Feb 15 19:57:17 1999  Aaron M. Renn  <arenn@urbanophile.com>

	* gnu/testlet/TestHarness.java (check(double, double)): New method

	* gnu/testlet/TestHarness.java (check(double, double, String)): 
        New method

	* gnu/testlet/TestHarness.java (getResourceStream): New method
	
	* gnu/testlet/SimpleTestHarness.java (getResourceStream): New method
	
	* gnu/testlet/SimpleTestHarness.java (getResourceReader): Use
	getResourceStream

	* gnu/testlet/SimpleTestHarness.java (runtest): Return if not
	instanceof Testlet

1999-02-07  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/util/BitSet/jdk10.java (trulyEquals): Don't
	pass description to check().
	(test): Fixed typo.
